# HHbbggFlow

./: .gitignore  README.md  environment.yml  full-package-list.txt  makeSMsamplesJSON.sh  pyproject.toml  requirements.txt  run_analysis.py
HHbbgg_flow/: __init__.py
HHbbgg_flow/analysis_manager/: __init__.py  analysis.py  run_analysis.py
HHbbgg_flow/condor/: exe_template.sh  submit_condor_jobs.py  submit_template.txt
HHbbgg_flow/metadata/samples/: SMsamples.json  tth_compute_vars.json~
HHbbgg_flow/ttH_killer/: __init__.py  compute_ttH_vars.py  ttH_sideband_cuts.py
HHbbgg_flow/utils/: logger_utils.py
scripts/: run_analysis.py  run_analysis.py~
