[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HHbbgg_flow"
dynamic = ["version", "dependencies"]
requires-python = ">=3.8"
authors = [
  {name = "Irene Dutte"},
  {name = "Yibo Zhong"},
  {name = "Thomas Sievert"},
]
description = "Analysis flow for CMS HH to bbgg analysis."
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}